  7 December 2018
Fixed Bracmat JNI not being thread safe in Windows. This is now solved by
using the C++ std::mutex implementation.

  28 October 2018
Changed behaviour: get$<filename> returns the result of evaluation of the
last expression. If the last non-white character in the file is a semicolon,
then the last expression evaluates to an empty string. Previously, the returned
value was the result of evaluating the last expression that did not consist of
white spaces, or, if there was no such expression (i.e. an empty file), the
get$<filename> expression itself. The latter could have very undesirable side-
effects.

  27 August 2018
Added ':' and '_' as valid start characters in XML (and html) names.

  17 May 2018
Fixed uninstantiated-pointer error in vap$ function. (When given en empty
string as input.)

   6 February 2018
New function vap that does with strings what map does with lists.
vap can deconstruct a string character-wise or split it at every
separator. The separator, if defined, can be any string. vap knows
about UTF-8.

   5 October 2017
Avoid unnecessary memory (de)allocation in solution made yesterday.

   4 October 2017
Pattern functions that return ? on success can be negated. 

  22 August 2017
Tested #define'd options and made minor fixes to make bracmat.c compile with
every option turned on and off.

  11 August 2017
lex.bra: ignore anonymous functions in the list of undeclared functions. 

   1 August 2017
In xml.c: much extended list of HTML entities. Corrected typo in the
predefined function MLencoding that determines the encoding of an XML or HTML
file.

  28 July 2017
Uses UnicodeData.txt 2017-04-14, 05:40:18 GMT, no change of behaviour.

  21 June 2017
Added a built-in map function. Usage: map$(<fnc>.<space separated list>)

  19 May 2017
More 'localisation' of source code to English

  10 May 2017
'localised' source code to English, so you no longer need some knowledge of
Dutch and Danish to understand the code.